data/diff_tests/v8/nop_EdgeCaseFailuresinbr_table_786.wast
;; 7. **Test Description**: Use a `br_table` instruction, where the index equals the number of valid targets plus one. Insert `nop` immediately before the `br_table`.     - **Constraint Checked**: Ensure that a single `nop` preceding the `br_table` does not affect the handling of an index beyond targets.     - **Edge Case Relation**: The handling of the index should trigger appropriate behavior with the exact placement of `nop`.

(assert_malformed
  (module
    (func
      (block $label0
        (nop)
        (br_table $label0 $label0 2)
      )
    )
  )
  "unexpected index in br_table"
)